# survival-game

./: Cargo.toml  bruh.txt  bruh2.txt  notes.txt  survival-game - Shortcut.lnk
maps/: map.tmx  untitled.tmx
shaders/: lighting.fs
src/: assets.rs  collision_world.rs  debug.rs  draw_collider.rs  game_map.rs  inventory.rs  lighting.rs  lighting_renderer.rs  main.rs  player.rs  rapier_world.rs  traits.rs  world.rs  world_collider.rs
tilesets/: ground_tiles.tsx
