[package]
name = "survival-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add this to your Cargo.toml
[profile.dev.package.rapier2d]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.raylib]
opt-level = 3

[dependencies]
rapier2d = { version = "*", features = [ "simd-stable" ] }

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/bitten2up/raylib-rs"
branch = "5.0.0"